<resources>
    <string name="app_name">Todo</string>
    <string name="nav_header_title">Todo App</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_add">Add New Task</string>
    <string name="menu_edit">Edit Task</string>

    <string name="low_priority">LOW</string>
    <string name="medium_priority">MED</string>
    <string name="high_priority">HIGH</string>

    <string name="low_priority_lower">Low</string>
    <string name="medium_priority_lower">Med</string>
    <string name="high_priority_lower">High</string>

    <string name="time_format">%1$s:%2$s</string>
    <string name="date_format">%1$s %2$s %3$s</string>
    <string name="date_time_format">%1$s   %2$s</string>
    <string name="my_tasks_format">My %1$s tasks</string>

    <string name="create_header">Create new task</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="priority">Priority</string>
    <string name="list">List</string>
    <string name="add">Add</string>
    <string name="no_task">No Task Yet</string>
    <string name="no_result">No Result</string>
    <string name="no_task_detail">Add new todos and keep track on them</string>
    <string name="no_result_detail">We couldn\'t find what you were looking for</string>
    <string name="list_name">List Name</string>
    <string name="create_new_list">Create New List</string>
    <string name="purple">Purple</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="brown">Brown</string>
    <string name="pink">Pink</string>
    <string name="orange">Orange</string>
    <string name="cancel">Cancel</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="reminder_is_set">Reminder is set</string>
    <string name="color">Color</string>
    <string name="list_add">Add New List</string>
    <string name="already_have_reminder">You already set a reminder before!</string>
    <string name="please_enter_task">Please enter name and description!</string>
    <string name="please_enter_date">Please pick date and time!</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="edit_header">Edit Task</string>
    <string name="edit_list">Edit List</string>
    <string name="text_limit_error">You have exceeded the character limit!</string>
    <string name="menu_edit_list">Edit List</string>
    <string name="please_enter_list">Please enter name!</string>
    <string name="delete_list">Delete list?</string>
    <string name="delete_warning">You\'ll lose all tasks inside the list!</string>
    <string name="not_editable">This list is not editable</string>
    <string name="date">Pick a date</string>
    <string name="time">Pick a time</string>
    <string name="add_reminder">Add reminder</string>
    <string name="apply">Apply</string>
    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="progress">In progress</string>
    <string name="my_tasks">My tasks</string>
    <string name="wrong_time">The time you chose has passed</string>
    <string name="reminder">Reminder</string>
    <string name="hey">Hey! Let\'s start. There are tasks to complete.</string>
    <string name="current_task">Current task</string>
    <string name="done">Done</string>
    <string name="lists">Lists</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate us</string>
    <string name="menu_about">About</string>
    <string name="all">All</string>
    <string name="new_list">New List</string>


    <string name="notifications">Notifications</string>
    <string name="language">App Language</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_feedback">Share Feedback</string>
    <string name="help">Help</string>
    <string name="details">Details</string>
    <string name="ask_delete">Are you sure you want to delete?</string>

    <string name="english">English</string>
    <string name="deutsch">Deutsch</string>
    <string name="day_streak">Day streak</string>
    <string name="streak">Streak</string>
    <string name="tracker">Tracker</string>
    <string name="tracked_before">Already completed today</string>
    <string name="tracker_max_format">/%1$d</string>
    <string name="search_here">Search here...</string>


    <string-array name="repeat">
        <item>Does not repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>

    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="days_of_week">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string name="search">Search</string>
    <string name="filter">filter</string>

</resources>