<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.chip.ChipGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/priority_chips_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:checkedChip="@id/chip_low"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:singleSelection="true">

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_low"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:checkedIconVisible="true"
        android:textSize="16sp"
        android:backgroundTint="@color/low"
        android:text="@string/low_priority"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_medium"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:backgroundTint="@color/medium"
        android:text="@string/medium_priority"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_high"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:backgroundTint="@color/high"
        android:text="@string/high_priority"/>

</com.google.android.material.chip.ChipGroup>