<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/add_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/editField"
                layout="@layout/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tracker_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tracker"
                android:textColor="@color/header"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/editField"
                app:layout_constraintTop_toBottomOf="@+id/editField" />

            <include
                android:id="@+id/tracker_layout"
                layout="@layout/tracker_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/tracker_header"
                app:layout_constraintTop_toBottomOf="@id/tracker_header"/>


            <TextView
                android:id="@+id/priority_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/priority"
                android:textColor="@color/header"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tracker_layout"
                app:layout_constraintTop_toBottomOf="@+id/tracker_layout" />


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/priority_chips_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/priority_header"
                app:layout_constraintTop_toBottomOf="@id/priority_header"
                app:singleSelection="true" />

            <TextView
                android:id="@+id/list_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/list"
                android:textColor="@color/header"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/priority_chips_group"
                app:layout_constraintTop_toBottomOf="@+id/priority_chips_group" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/list_header"
                app:layout_constraintEnd_toEndOf="@id/editField"
                app:layout_constraintTop_toBottomOf="@id/list_header"
                app:singleSelection="true" />

            <TextView
                android:id="@+id/reminder_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/reminder"
                android:textColor="@color/header"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/chip_list"
                app:layout_constraintTop_toBottomOf="@+id/chip_list" />

            <FrameLayout
                android:id="@+id/reminder_chip_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reminder_header"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="18sp"
        android:textColor="@color/on_button_color"
        android:paddingVertical="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:drawablePadding="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        app:drawableRightCompat="@drawable/ic_button_arrow_right"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <FrameLayout
        android:id="@+id/reminder_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/reminder_background"
        android:clickable="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true">
        <androidx.cardview.widget.CardView
            android:id="@+id/reminder_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="60dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/reminder_card_background">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:id="@+id/add_reminder_text"
                    android:text="@string/add_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/header"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_reminder_text"/>

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textColor="@color/header"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:drawablePadding="6dp"
                    app:drawableLeftCompat="@drawable/ic_calendar_45"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_reminder_text"/>

                <TextView
                    android:id="@+id/time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textColor="@color/header"
                    android:textSize="16sp"
                    android:drawablePadding="6dp"
                    android:layout_marginTop="20dp"
                    app:drawableLeftCompat="@drawable/ic_time_45"
                    app:layout_constraintStart_toStartOf="@id/date_text"
                    app:layout_constraintTop_toBottomOf="@id/date_text"/>

                <Spinner
                    android:id="@+id/repeat_spinner"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="@id/time_text"
                    app:layout_constraintTop_toBottomOf="@id/time_text"/>


                <LinearLayout
                    android:id="@+id/button_layout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/repeat_spinner">
                    <Button
                        android:id="@+id/cancel_reminder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:strokeColor="@color/list_color_red"
                        android:textColor="@color/list_color_red"
                        android:text="@string/cancel"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"/>

                    <Button
                        android:id="@+id/apply_reminder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        app:backgroundTint="@color/list_color_blue"
                        android:text="@string/apply"
                        android:textColor="@color/white" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>