<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_header"
                android:layout_marginTop="60dp"
                android:textStyle="bold"
                android:textColor="@color/header"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/editField"
                layout="@layout/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/header_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/priority_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColor="@color/header"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/priority"
                app:layout_constraintStart_toStartOf="@+id/editField"
                app:layout_constraintTop_toBottomOf="@+id/editField" />


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/priority_chips_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:singleSelection="true"
                app:layout_constraintTop_toBottomOf="@id/priority_header"
                app:layout_constraintStart_toStartOf="@id/priority_header"/>

            <TextView
                android:id="@+id/list_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColor="@color/header"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/list"
                app:layout_constraintStart_toStartOf="@+id/priority_chips_group"
                app:layout_constraintTop_toBottomOf="@+id/priority_chips_group" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:singleSelection="true"
                app:layout_constraintStart_toStartOf="@id/list_header"
                app:layout_constraintTop_toBottomOf="@id/list_header"/>

            <FrameLayout
                android:id="@+id/reminder_chip_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/save_button" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/list_color_all"
                android:textColor="@color/white"
                android:padding="10dp"
                android:text="@string/save"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/chip_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>






    <FrameLayout
        android:id="@+id/reminder_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/reminder_background"
        android:clickable="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true">
        <androidx.cardview.widget.CardView
            android:id="@+id/reminder_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="60dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/cardview_light_background">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:id="@+id/add_reminder_text"
                    android:text="@string/add_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/header"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_reminder_text"/>

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textColor="@color/header"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:drawablePadding="6dp"
                    app:drawableLeftCompat="@drawable/ic_calendar_45"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_reminder_text"/>

                <TextView
                    android:id="@+id/time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textColor="@color/header"
                    android:textSize="16sp"
                    android:drawablePadding="6dp"
                    android:layout_marginTop="20dp"
                    app:drawableLeftCompat="@drawable/ic_time_45"
                    app:layout_constraintStart_toStartOf="@id/date_text"
                    app:layout_constraintTop_toBottomOf="@id/date_text"/>

                <Spinner
                    android:id="@+id/repeat_spinner"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="@id/time_text"
                    app:layout_constraintTop_toBottomOf="@id/time_text"/>


                <LinearLayout
                    android:id="@+id/button_layout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/repeat_spinner">
                    <Button
                        android:id="@+id/cancel_reminder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:strokeColor="@color/list_color_red"
                        android:textColor="@color/list_color_red"
                        android:text="@string/cancel"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"/>

                    <Button
                        android:id="@+id/apply_reminder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        app:backgroundTint="@color/list_color_blue"
                        android:text="@string/apply"
                        android:textColor="@color/white" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>